fix: align

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -48,6 +48,7 @@ header {
     text-align: center;
     justify-items: center;
     padding: 50px 0;
+    margin: 0 auto;
     img {
         width: 500px;
     }
